# djed_self_tokenize

./: .gitignore  Cargo.toml  README.md
djed_self_tokenize_macro/: Cargo.toml
djed_self_tokenize_macro/src/: lib.rs  util.rs
djed_self_tokenize_macro/tests/: spec.rs
djed_self_tokenize_trait/: Cargo.toml
djed_self_tokenize_trait/src/: lib.rs
